# bob

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  Makefile  README.md  coverage.html  create-worktree.sh  go.mod  go.sum  harness.md
.bob/issues/: task-1.json  task-10.json  task-11.json  task-2.json  task-3.json  task-4.json  task-5.json  task-6.json  task-7.json  task-8.json  task-9.json
.bpb/issues/: task-1.json
.claude/: settings.local.json
agents/architecture-introspector/: SKILL.md  SKILL.pi.md
agents/architecture-review/: SKILL.md
agents/bug-finder/: SKILL.md  SKILL.pi.md
agents/code-review/: SKILL.md
agents/coder/: SKILL.md
agents/commit-agent/: SKILL.md
agents/debugger/: SKILL.md
agents/docs-reviewer/: SKILL.md
bob/: Makefile
cmd/bob-plugin/: Cargo.toml
cmd/bob-plugin/src/: lib.rs  poll.rs  spawn.rs  state.rs  ui.rs
config/: README.md  bob.kdl  claude-permissions.json  user-claude-no-python.md
docs/: AUTO_WORKTREE_FEATURE.md  CODE_REVIEW_WORKFLOW_RESILIENCE.md  OKF.md  PIRATE-MODE.md  TEAM-WORK-SUMMARY.md  WORKFLOW_RESILIENCE.md  pure-orchestrator-refactor.md  shipmate-attributes.md  team-work-design.md
extensions/: README.md  bash-compact.ts  otel-debug-log.ts  otel.ts  quiet-thoughts.ts
hooks/: README.md  hooks-config.json  pre-commit-checks.sh
personalities/: default.md  disney.md  pirate.md
scripts/: bob  detect-workspace.sh  fix-shipmate-hooks.sh  install-lsp.sh  install-mcp-servers.sh  install-shipmate-mcp.py  install-shipmate.py  resolve-copilot-comments.sh  statusline-command.sh
workflows/: local.md
(+350 files in other folders)
